refactor: clean up code formatting and improve consistency across multiple files

--- a/server/package.json
+++ b/server/package.json
@@ -28,11 +28,7 @@
     "typescript": "^5.7.3"
   },
   "pnpm": {
-    "onlyBuiltDependencies": [
-      "@biomejs/biome"
-    ],
-    "ignoredBuiltDependencies": [
-      "esbuild"
-    ]
+    "onlyBuiltDependencies": ["@biomejs/biome"],
+    "ignoredBuiltDependencies": ["esbuild"]
   }
 }
