--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch --env-file=.env src/server.ts"
+    "dev": "tsx watch --env-file=.env src/server.ts",
+    "lint": "pnpm biome check --write .",
+    "schema": "pnpm drizzle-kit generate",
+    "build": "tsup-node"
   },
   "keywords": [],
   "author": "",
@@ -24,11 +27,16 @@
     "@biomejs/biome": "^1.9.4",
     "@types/node": "^22.13.5",
     "drizzle-kit": "^0.30.4",
+    "tsup": "^8.5.0",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3"
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["@biomejs/biome"],
-    "ignoredBuiltDependencies": ["esbuild"]
+    "onlyBuiltDependencies": [
+      "@biomejs/biome"
+    ],
+    "ignoredBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
