--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "dev": "tsx watch --env-file=.env src/server.ts",
     "lint": "pnpm biome check --write .",
-    "schema": "pnpm drizzle-kit generate",
-    "build": "tsup-node"
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "build": "tsup-node",
+    "start": "node dist/server.mjs"
   },
   "keywords": [],
   "author": "",
